up to Wk7 Q5 (d)